@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.FlickrRipper;
 
@@ -11,9 +12,9 @@ import org.junit.jupiter.api.Test;
 public class FlickrRipperTest extends RippersTest {
     @Test
     @Disabled("https://github.com/RipMeApp/ripme/issues/243")
-    public void testFlickrAlbum() throws IOException {
+    public void testFlickrAlbum() throws IOException, URISyntaxException {
         FlickrRipper ripper = new FlickrRipper(
-                new URL("https://www.flickr.com/photos/leavingallbehind/sets/72157621895942720/"));
+                new URI("https://www.flickr.com/photos/leavingallbehind/sets/72157621895942720/").toURL());
         testRipper(ripper);
     }
 
